gradle file updated and made app new and error in kt files need to sort

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
 
 <!--    code by me-->
     <!--Testing IDs-->
-    <string name="default_web_client_id">aryan@123</string>
+<!--    <string name="default_web_client_id">aryan@123</string>-->
     <!--<string name="admob_test_app_id">ca-app-pub-3940256099942544~3347511713</string>
     <string name="admob_test_banner">ca-app-pub-3940256099942544/6300978111</string>
 -->
